# aeds2

./: .bazelrc  .clang-format  .gitignore  README.md  WORKSPACE.bazel  cspell.json  flake.nix
common/: BUILD.bazel  string-test-in.txt  string-test-out.txt  string.c
ds/linkedlist/: BUILD.bazel  LinkedList.java  LinkedListTest.java  out.txt
ds/linkedqueue/: BUILD.bazel  LinkedQueue.java  LinkedQueueTest.java  out.txt
ds/linkedstack/: BUILD.bazel  LinkedStack.java  LinkedStackTest.java  out.txt
lib/: BUILD.bazel  code-diff.sh  diff-test.bzl
s02/labs/lab01/: BUILD.bazel  E01.java  E04.c  E4.java  e4.c  in.txt
s02/labs/lab02/: BUILD.bazel  E01.c  E02.java  mirrored-numbers-in.txt  mirrored-numbers-out.txt
s02/tps/common/: BUILD.bazel
s02/tps/tp01/: BUILD.bazel  E01.java  E02.c  E03.java  E04.java  E05.java  E06.java  E07.c  E08.java  E09.java  E10.c  E11.java  E12.c  E13.java  E15.java  palindrome-in.txt
s02/tps/tp02/: BUILD.bazel  E01.java  E03.java  E04.java  E05.java  E06.java  E07.java  games-linear-search-in.txt
s02/tps/tp03/: BUILD.bazel  E01.java  E03.java  E05.java  E06.java  E08.java  E09.java  e03-out.txt  e05-out.txt  e08-out.txt  e09-out.txt
s02/tps/tp04/: BUILD.bazel  E01.java  E02.java  E03.java  E04.java  E07.java
