load("//lib:diff-test.bzl", "diff_test")

java_binary(
    name = "e01",
    srcs = ["E01.java"],
    main_class = "E01",
)

diff_test(
    name = "e01-test",
    bin = ":e01",
    input = "in.txt",
    output = "out.txt",
)

cc_binary(
    name = "e04",
    srcs = ["E04.c"],
)

diff_test(
    name = "e04-test",
    bin = ":e04",
    input = "in.txt",
    output = "out.txt",
)
