load("//lib:diff-test.bzl", "diff_test")

cc_binary(
    name = "e01",
    srcs = ["E01.c"],
)

diff_test(
    name = "e01-test",
    bin = ":e01",
    input = "overlapping-str-in.txt",
    output = "overlapping-str-out.txt",
)

java_binary(
    name = "e02",
    srcs = ["E02.java"],
    main_class = "E02",
)

diff_test(
    name = "e02-test",
    bin = ":e02",
    input = "mirrored-numbers-in.txt",
    output = "mirrored-numbers-out.txt",
)
