load("//lib:diff-test.bzl", "diff_test")

java_binary(
    name = "e01",
    srcs = ["E01.java"],
    main_class = "E01",
)

diff_test(
    name = "e01-test",
    bin = ":e01",
    input = "palindrome-in.txt",
    output = "palindrome-out.txt",
)

cc_binary(
    name = "e02",
    srcs = ["E02.c"],
)

diff_test(
    name = "e02-test",
    bin = ":e02",
    input = "palindrome-in.txt",
    output = "palindrome-out.txt",
)

java_binary(
    name = "e03",
    srcs = ["E03.java"],
    main_class = "E03",
)

diff_test(
    name = "e03-test",
    bin = ":e03",
    input = "caesar-in.txt",
    output = "caesar-out.txt",
)

java_binary(
    name = "e04",
    srcs = ["E04.java"],
    main_class = "E04",
)

diff_test(
    name = "e04-test",
    bin = ":e04",
    input = "random-replace-in.txt",
    output = "random-replace-out.txt",
)

java_binary(
    name = "e05",
    srcs = ["E05.java"],
    main_class = "E05",
)

diff_test(
    name = "e05-test",
    bin = ":e05",
    input = "bool-in.txt",
    output = "bool-out.txt",
)

java_binary(
    name = "e06",
    srcs = ["E06.java"],
    main_class = "E06",
)

diff_test(
    name = "e06-test",
    bin = ":e06",
    input = "is-in.txt",
    output = "is-out.txt",
)

cc_binary(
    name = "e07",
    srcs = ["E07.c"],
)

diff_test(
    name = "e07-test",
    bin = ":e07",
    input = "is-in.txt",
    output = "is-out.txt",
)
