load("//lib:diff-test.bzl", "diff_test")

java_binary(
    name = "e01",
    srcs = ["E01.java"],
    main_class = "E01",
)

diff_test(
    name = "e01-test",
    bin = ":e01",
    input = "palindrome-in.txt",
    output = "palindrome-out.txt",
)

cc_binary(
    name = "e02",
    srcs = ["E02.c"],
)

diff_test(
    name = "e02-test",
    bin = ":e02",
    input = "palindrome-in.txt",
    output = "palindrome-out.txt",
)

java_binary(
    name = "e03",
    srcs = ["E03.java"],
    main_class = "E03",
)

diff_test(
    name = "e03-test",
    bin = ":e03",
    input = "caesar-in.txt",
    output = "caesar-out.txt",
)

java_binary(
    name = "e04",
    srcs = ["E04.java"],
    main_class = "E04",
)

diff_test(
    name = "e04-test",
    bin = ":e04",
    input = "random-replace-in.txt",
    output = "random-replace-out.txt",
)

java_binary(
    name = "e05",
    srcs = ["E05.java"],
    main_class = "E05",
)

diff_test(
    name = "e05-test",
    bin = ":e05",
    input = "bool-in.txt",
    output = "bool-out.txt",
)

java_binary(
    name = "e06",
    srcs = ["E06.java"],
    main_class = "E06",
)

diff_test(
    name = "e06-test",
    bin = ":e06",
    input = "is-in.txt",
    output = "is-out.txt",
)

cc_binary(
    name = "e07",
    srcs = ["E07.c"],
)

diff_test(
    name = "e07-test",
    bin = ":e07",
    input = "is-in.txt",
    output = "is-out.txt",
)

java_binary(
    name = "e08",
    srcs = ["E08.java"],
    main_class = "E08",
)

diff_test(
    name = "e08-test",
    bin = ":e08",
    input = "html-in.txt",
    output = "html-out.txt",
    tags = ["manual"],
)

java_binary(
    name = "e09",
    srcs = ["E09.java"],
    main_class = "E09",
)

diff_test(
    name = "e09-test",
    bin = ":e09",
    input = "random-access-file-in.txt",
    output = "random-access-file-out.txt",
)

cc_binary(
    name = "e10",
    srcs = ["E10.c"],
)

diff_test(
    name = "e10-test",
    bin = ":e10",
    input = "random-access-file-in.txt",
    output = "random-access-file-out.txt",
)

java_binary(
    name = "e11",
    srcs = ["E11.java"],
    main_class = "E11",
)

diff_test(
    name = "e11-test",
    bin = ":e11",
    input = "palindrome-in.txt",
    output = "palindrome-out.txt",
)

cc_binary(
    name = "e12",
    srcs = ["E12.c"],
)

diff_test(
    name = "e12-test",
    bin = ":e12",
    input = "palindrome-in.txt",
    output = "palindrome-out.txt",
)
