load("//lib:diff-test.bzl", "diff_test")

java_binary(
    name = "e01",
    srcs = ["E01.java"],
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    data = ["//s02/tps/common:etc/games.csv"],
    main_class = "E01",
)

diff_test(
    name = "e01-test",
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    bin = ":e01",
    data = ["//s02/tps/common:etc/games.csv"],
    input = "games-first-in.txt",
    output = "games-first-out.txt",
)

java_binary(
    name = "e03",
    srcs = ["E03.java"],
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    data = ["//s02/tps/common:etc/games.csv"],
    main_class = "E03",
)

diff_test(
    name = "e03-test",
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    bin = ":e03",
    data = ["//s02/tps/common:etc/games.csv"],
    input = "games-search-in.txt",
    output = "games-search-out.txt",
)

java_binary(
    name = "e04",
    srcs = ["E04.java"],
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    data = ["//s02/tps/common:etc/games.csv"],
    main_class = "E04",
)

diff_test(
    name = "e04-test",
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    bin = ":e04",
    data = ["//s02/tps/common:etc/games.csv"],
    input = "games-search-in.txt",
    output = "games-search-out.txt",
)
