load("//lib:diff-test.bzl", "diff_test")

java_binary(
    name = "e01",
    srcs = ["E01.java"],
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    data = ["//s02/tps/common:etc/games.csv"],
    main_class = "E01",
)

diff_test(
    name = "e01-test",
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    bin = ":e01",
    data = ["//s02/tps/common:etc/games.csv"],
    input = "e01-in.txt",
    output = "e01-out.txt",
)

java_binary(
    name = "e03",
    srcs = ["E03.java"],
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    data = ["//s02/tps/common:etc/games.csv"],
    main_class = "E03",
)

diff_test(
    name = "e03-test",
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    bin = ":e03",
    data = ["//s02/tps/common:etc/games.csv"],
    input = "e03-in.txt",
    output = "e03-out.txt",
)

java_binary(
    name = "e05",
    srcs = ["E05.java"],
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    data = ["//s02/tps/common:etc/games.csv"],
    main_class = "E05",
)

diff_test(
    name = "e05-test",
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    bin = ":e05",
    data = ["//s02/tps/common:etc/games.csv"],
    input = "e05-in.txt",
    output = "e05-out.txt",
)

java_binary(
    name = "e06",
    srcs = ["E06.java"],
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    data = ["//s02/tps/common:etc/games.csv"],
    main_class = "E06",
)

diff_test(
    name = "e06-test",
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    bin = ":e06",
    data = ["//s02/tps/common:etc/games.csv"],
    input = "e06-in.txt",
    output = "e06-out.txt",
)
