load("//lib:diff-test.bzl", "diff_test")

java_binary(
    name = "e01",
    srcs = ["E01.java"],
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    data = ["//s02/tps/common:etc/games.csv"],
    main_class = "E01",
)

diff_test(
    name = "e01-test",
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    bin = ":e01",
    data = ["//s02/tps/common:etc/games.csv"],
    input = "e01-in.txt",
    output = "e01-out.txt",
)

java_binary(
    name = "e02",
    srcs = ["E02.java"],
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    data = ["//s02/tps/common:etc/games.csv"],
    main_class = "E02",
)

diff_test(
    name = "e02-test",
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    bin = ":e02",
    data = ["//s02/tps/common:etc/games.csv"],
    input = "e02-in.txt",
    output = "e02-out.txt",
)

java_binary(
    name = "e03",
    srcs = ["E03.java"],
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    data = ["//s02/tps/common:etc/games.csv"],
    main_class = "E03",
)

diff_test(
    name = "e03-test",
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    bin = ":e03",
    data = ["//s02/tps/common:etc/games.csv"],
    input = "e03-in.txt",
    output = "e03-out.txt",
)

java_binary(
    name = "e04",
    srcs = ["E04.java"],
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    data = ["//s02/tps/common:etc/games.csv"],
    main_class = "E04",
)

diff_test(
    name = "e04-test",
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    bin = ":e04",
    data = ["//s02/tps/common:etc/games.csv"],
    input = "e04-in.txt",
    output = "e04-out.txt",
)

java_binary(
    name = "e07",
    srcs = ["E07.java"],
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    data = ["//s02/tps/common:etc/games.csv"],
    main_class = "E07",
)

diff_test(
    name = "e07-test",
    args = ["$(location //s02/tps/common:etc/games.csv)"],
    bin = ":e07",
    data = ["//s02/tps/common:etc/games.csv"],
    input = "e07-in.txt",
    output = "e07-out.txt",
)
